--- a/index.html
+++ b/index.html
@@ -15,21 +15,17 @@
     <div id="app">
         <h1>La calculatrice collaborative</h1>
         <div class="form-container">
-          <form>
-            <div class="form-group col-xs-6">
-              <input class="form-control" type="number" v-model="opA">
-            </div>
-            <div class="form-group col-xs-6">
-              <input class="form-control" type="number" v-model="opB">
-            </div>
-            <div class="row">
-              <button id="plus" v-on:click="addition()" class="btn btn-primary col-xs-6">+</button>
-              <button id="moins" v-on:click="soustraction()" class="btn btn-info col-xs-6">-</button>
-            </div>
+            <form>
+                <div class="form-group col-xs-6">
+                    <input class="form-control" type="text" v-model="expr">
+                </div>
+                <div class="row">
+                    <button id="plus" v-on:click="Calculate()" class="btn btn-primary col-xs-6">Calculer</button>
+                </div>      
+            </form>
             <div id="resultat">
-              <h2>{{ result }}</h2>
+                <h2>{{ result }}</h2>
             </div>
-          </form>
         </div>
     </div>
 
