--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     </div>
 
     <!-- import de Vue JS et de notre script -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/3.16.2/math.min.js"></script>
     <script type="text/javascript" src="https://unpkg.com/vue@2.4.2/dist/vue.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
 </body>
