fix type button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <input class="form-control" type="text" v-model="expr">
                 </div>
                 <div class="row">
-                    <button id="plus" v-on:click="Calculate()" class="btn btn-primary col-xs-6">Calculer</button>
+                    <button id="plus" v-on:click="Calculate()" class="btn btn-primary col-xs-6" type="button">Calculer</button>
                 </div>      
             </form>
             <div id="resultat">
