FIxing the calculate function call

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                     <input class="form-control" type="text" v-model="expr">
                 </div>
                 <div class="row">
-                    <button id="plus" v-on:click="Calculate()" class="btn btn-primary col-xs-6" type="button">Calculer</button>
-                </div>      
+                    <button id="plus" v-on:click="calculate()" class="btn btn-primary col-xs-6" type="button">Calculer</button>
+                </div>
             </form>
             <div id="resultat">
                 <h2>{{ result }}</h2>
