--- a/index.html
+++ b/index.html
@@ -13,23 +13,21 @@
 
     <!-- l'élément DOM contenant l'application -->
     <div id="app">
-        <h1>La calculatrice collaborative</h1>
-        <div class="form-container">
-          <form>
-            <div class="form-group col-xs-6">
-              <input class="form-control" type="number" v-model="opA">
-            </div>
-            <div class="form-group col-xs-6">
-              <input class="form-control" type="number" v-model="opB">
-            </div>
-            <div class="row">
-              <button id="plus" v-on:click="addition()" class="btn btn-primary col-xs-6">+</button>
-              <button id="moins" v-on:click="soustraction()" class="btn btn-info col-xs-6">-</button>
-            </div>
-            <div id="resultat">
-              <h2>{{ result }}</h2>
+        <h1 class="text-center">La calculatrice collaborative</h1>
+        <div class="container">
+          <form class="form-inline">
+            <div class="form-row">
+              <div class="form-group col-xs-8">
+                <input type="text" class="form-control" v-model="opA">
+              </div>
+              <div class="form-group col-xs-2">
+                <button id="plus" type="button" v-on:click="addition()" class="btn btn-info btn-block">=</button>
+              </div>
             </div>
           </form>
+          <div id="resultat" class="text-right">
+            <h2>{{ result }}</h2>
+          </div>
         </div>
     </div>
 
