--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <h1 class="text-center">La calculatrice collaborative</h1>
         <div class="container">
           <form>
-            <div class="form-row">
-              <div class="form-group col-xs-8">
+            <div class="row">
+              <div class="input-group">
                 <input type="text" class="form-control" v-model="expr">
-              </div>
-              <div class="form-group col-xs-2">
-                <button id="plus" type="button" v-on:click="calculate()" class="btn btn-info btn-block">Calculer</button>
+                <span class="input-group-btn">
+                  <button id="plus" type="button" v-on:click="calculate()" class="btn btn-info btn-block">Calculer</button>
+                </span>
               </div>
             </div>
           </form>
