Affichage Historique + Unshift

--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
                 </div>
                 <div class="column">
                     <h3>Ici les mémoires</h3>
-                    <h3>Ici l'historique</h3>
+                    <h3>Historique des calculs</h3>
+                    <ul>
+                        <li v-for="item in historic">{{item.calcul}} = {{item.result}}</li>
+                    </ul>
                 </div>
             </div>
             <div class="columns">
@@ -49,6 +52,7 @@
                     <h3 class="title">Résultat : {{ result }}</h3>
                 </div>
             </div>
+
         </div>
     </section>
 
