--- a/index.html
+++ b/index.html
@@ -28,11 +28,30 @@
                     </div>
                 </div>
                 <div class="column is-one-quarter">
-                    <a class="button is-primary is-large" @click="calculate()">Calculez</a>
+                    <a class="button is-primary is-large is-fullwidth" @click="calculate()">Calculez</a>
                 </div>
             </div>
             <div class="columns">
+                <div class="column is-half">
+                    <div class="columns is-gapless" v-for="(inputList, index) in inputs">
+                        <div class="column" v-for="input in inputs[index]">
+                            <a class="button is-fullwidth" @click="append(input)">{{ input }}</a>
+                        </div>
+                    </div>
+                </div>
                 <div class="column">
+                    <div class="field is-grouped">
+                        <p class="control" v-for="(memory, index) in memories">
+                            <a class="button" @click="toggleMemory(index)">M{{ index }} <span v-if="memory.value != 0"> = {{ memory.value }}</span></a>
+                        </p>
+                    </div>
+                    <ul>
+                        <li v-for="item in historic">{{item.calcul}} = {{item.result}}</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="columns">
+                <div class="column is-one-quarter">
                     <h3 class="title">Résultat : {{ result }}</h3>
                 </div>
             </div>
@@ -41,7 +60,7 @@
 
     <!-- import de Vue JS et de notre script -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/3.16.2/math.min.js"></script>
-    <script type="text/javascript" src="https://unpkg.com/vue@2.4.2/dist/vue.min.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/vue@2.4.2/dist/vue.js"></script>
     <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
