--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
                 </div>
             </div>
             <div class="columns">
+                <div class="column has-text-centered">
+                    <h3 class="title">Résultat : {{ result }}</h3>
+                </div>
+            </div>
+            <div class="columns">
                 <div class="column is-half">
                     <div class="columns is-gapless" v-for="(inputList, index) in inputs">
                         <div class="column" v-for="input in inputs[index]">
@@ -48,20 +53,6 @@
                     <ul>
                         <li v-for="item in historic">{{item.calcul}} = {{item.result}}</li>
                     </ul>
-                </div>
-            </div>
-            <div class="columns">
-                <div class="column is-one-quarter">
-                    <h3>Ici les mémoires</h3>
-                    <h3>Historique des calculs</h3>
-                    <ul>
-                        <li v-for="item in historic">{{item.calcul}} = {{item.result}}</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="columns">
-                <div class="column is-one-quarter">
-                    <h3 class="title">Résultat : {{ result }}</h3>
                 </div>
             </div>
         </div>
